--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="#publications">Publications</a>
+                    <a href="#projects">Projects</a>
                 </li>
                 <li class="page-scroll">
                     <a href="#code">Code</a>
@@ -110,11 +110,11 @@
 </section>
 
 
-<section id="publications">
+<section id="projects">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-              <h2>Publications</h2>
+              <h2>Projects</h2>
               <hr />
             </div>
             <div class="col-lg-12">
